--- a/pf-exporter-test/pom.xml
+++ b/pf-exporter-test/pom.xml
@@ -31,6 +31,10 @@
 			<artifactId>xml-exporter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.lapis.pfexporter</groupId>
+			<artifactId>pdf-exporter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 		</dependency>
