--- a/excel-exporter/.project
+++ b/excel-exporter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xls-exporter</name>
+	<name>excel-exporter</name>
 	<comment></comment>
 	<projects>
 	</projects>
