Split PrimeFaces support into its own module

--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -14,6 +14,7 @@
 	
 	<modules>
 		<module>../jsf-exporter-core</module>
+		<module>../export-source-primefaces</module>
 		<module>../export-type-csv</module>
 		<module>../export-type-excel</module>
 		<module>../export-type-pdf</module>
@@ -25,6 +26,11 @@
 			<dependency>
 				<groupId>com.lapis.jsfexporter</groupId>
 				<artifactId>jsf-exporter-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lapis.jsfexporter</groupId>
+				<artifactId>export-source-primefaces</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
