--- a/export-source-primefaces/pom.xml
+++ b/export-source-primefaces/pom.xml
@@ -5,18 +5,22 @@
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>jsf-exporter-core</artifactId>
+	<artifactId>export-source-primefaces</artifactId>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 		</dependency>
+	
 		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>javax.el-api</artifactId>
+			<groupId>com.lapis.jsfexporter</groupId>
+			<artifactId>jsf-exporter-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
 		</dependency>
 	</dependencies>
 </project>
