Add some logging

--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -122,6 +122,11 @@
 				<artifactId>primefaces</artifactId>
 				<version>3.5</version>
 			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
