--- a/jsf-exporter-core/pom.xml
+++ b/jsf-exporter-core/pom.xml
@@ -18,5 +18,10 @@
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
