--- a/jsf-exporter-test/pom.xml
+++ b/jsf-exporter-test/pom.xml
@@ -21,6 +21,12 @@
 		<dependency>
 			<groupId>com.lapis.jsfexporter</groupId>
 			<artifactId>jsf-exporter-core</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.lapis.jsfexporter</groupId>
