--- a/jsf-exporter-core/pom.xml
+++ b/jsf-exporter-core/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
@@ -8,6 +9,16 @@
 		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>jsf-exporter-core</artifactId>
+	<packaging>jar</packaging>
+	
+	<name>Lapis JSF Exporter Core</name>
+	<description>Exporter core framework</description>
+	<url>https://github.com/rdicroce/jsfexporter</url>
+	<scm>
+		<url>https://github.com/rdicroce/jsfexporter</url>
+		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
+		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
+	</scm>
 	
 	<dependencies>
 		<dependency>
