--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -186,15 +186,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>license-maven-plugin</artifactId>
-				<version>1.4</version>
-				<configuration>
-					<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
-					<licenseName>apache_v2</licenseName>
-				</configuration>
-			</plugin>
 		</plugins>
 		
 		<pluginManagement>
@@ -219,7 +210,54 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.4.1</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>license-maven-plugin</artifactId>
+					<version>1.4</version>
+					<configuration>
+						<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+						<licenseName>apache_v2</licenseName>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>sonatype-oss-release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>license-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>license-check</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>check-file-header</goal>
+								</goals>
+								<configuration>
+									<failOnMissingHeader>true</failOnMissingHeader>
+									<failOnNotUptodateHeader>true</failOnNotUptodateHeader>
+								</configuration>
+							</execution>
+							<execution>
+								<id>generate-license-file</id>
+								<goals>
+									<goal>update-project-license</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
