--- a/export-type-excel/pom.xml
+++ b/export-type-excel/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0.Alpha1</version>
 		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>export-type-excel</artifactId>
@@ -18,7 +17,8 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
-	</scm>
+	  <tag>1.0.0.Alpha1</tag>
+  </scm>
 	
 	<dependencies>
 		<dependency>
