--- a/jsf-exporter-test/pom.xml
+++ b/jsf-exporter-test/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
-		<version>1.0.0.Alpha1</version>
+		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>jsf-exporter-test</artifactId>
@@ -18,8 +19,7 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
-	  <tag>1.0.0.Alpha1</tag>
-  </scm>
+	</scm>
 
 	<dependencies>
 		<dependency>
