STILL trying to get release to work

--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -213,6 +213,7 @@
 						<autoVersionSubmodules>true</autoVersionSubmodules>
 						<tagNameFormat>@{project.version}</tagNameFormat>
 						<arguments>-Prelease</arguments>
+						<localCheckout>true</localCheckout>
 					</configuration>
 				</plugin>
 				<plugin>
