Either Maven or Git thinks it's smarter than I am and is changing the URL when it tries to push the tag. Try changing the URL format to make it stop.

--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -30,8 +30,8 @@
 	</licenses>
 	<scm>
 		<url>https://github.com/rdicroce/jsfexporter</url>
-		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
-		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
+		<connection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</developerConnection>
 	</scm>
 	
 	<developers>
