--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
@@ -10,7 +9,7 @@
 	
 	<groupId>com.lapis.jsfexporter</groupId>
 	<artifactId>jsf-exporter-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.Alpha1</version>
 	<packaging>pom</packaging>
 	
 	<name>Lapis JSF Exporter Parent</name>
@@ -32,7 +31,8 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</developerConnection>
-	</scm>
+	  <tag>1.0.0.Alpha1</tag>
+  </scm>
 	
 	<developers>
 		<developer>
