Add support for h/p:commandLink. Make the test WAR easier to use.

--- a/jsf-exporter-test/src/main/webapp/WEB-INF/web.xml
+++ b/jsf-exporter-test/src/main/webapp/WEB-INF/web.xml
@@ -40,5 +40,9 @@
 		<param-name>facelets.DEVELOPMENT</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	
+	<welcome-file-list>
+		<welcome-file>faces/index.xhtml</welcome-file>
+	</welcome-file-list>
 
 </web-app>
