--- a/jsf-exporter-test/pom.xml
+++ b/jsf-exporter-test/pom.xml
@@ -44,6 +44,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.lapis.jsfexporter</groupId>
+			<artifactId>export-source-richfaces</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lapis.jsfexporter</groupId>
 			<artifactId>export-type-csv</artifactId>
 		</dependency>
 		<dependency>
@@ -61,6 +65,14 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces.core</groupId>
+			<artifactId>richfaces-core-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces.ui</groupId>
+			<artifactId>richfaces-components-ui</artifactId>
 		</dependency>
 	</dependencies>
 
