--- a/jsf-exporter-core/pom.xml
+++ b/jsf-exporter-core/pom.xml
@@ -31,6 +31,10 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
