--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -163,6 +163,11 @@
 				<version>2.0.5</version>
 			</dependency>
 			<dependency>
+				<groupId>org.omnifaces</groupId>
+				<artifactId>omnifaces</artifactId>
+				<version>1.7</version>
+			</dependency>
+			<dependency>
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
 				<version>4.0</version>
