--- a/export-source-richfaces/pom.xml
+++ b/export-source-richfaces/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
-		<version>1.0.2.Final</version>
+		<version>1.0.3.Final-SNAPSHOT</version>
 		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>export-source-richfaces</artifactId>
@@ -17,7 +17,7 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
-	  <tag>1.0.2.Final</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<dependencies>
