--- a/export-source-richfaces/pom.xml
+++ b/export-source-richfaces/pom.xml
@@ -31,8 +31,8 @@
 			<artifactId>jsf-exporter-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.richfaces.ui</groupId>
-			<artifactId>richfaces-components-ui</artifactId>
+			<groupId>org.richfaces</groupId>
+			<artifactId>richfaces</artifactId>
 		</dependency>
 	</dependencies>
 </project>
