--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -46,7 +46,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
-		<version.org.apache.poi>3.9</version.org.apache.poi>
+		<version.org.apache.poi>3.11</version.org.apache.poi>
 		<version.org.richfaces>4.3.4.Final</version.org.richfaces>
 	</properties>
 	
@@ -160,7 +160,7 @@
 			<dependency>
 				<groupId>org.jdom</groupId>
 				<artifactId>jdom2</artifactId>
-				<version>2.0.5</version>
+				<version>2.0.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.omnifaces</groupId>
@@ -170,17 +170,12 @@
 			<dependency>
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
-				<version>4.0</version>
+				<version>5.1</version>
 			</dependency>
 			<dependency>
-				<groupId>org.richfaces.core</groupId>
-				<artifactId>richfaces-core-impl</artifactId>
-				<version>${version.org.richfaces}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.richfaces.ui</groupId>
-				<artifactId>richfaces-components-ui</artifactId>
-				<version>${version.org.richfaces}</version>
+				<groupId>org.richfaces</groupId>
+				<artifactId>richfaces</artifactId>
+				<version>4.5.2.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
