--- a/jsf-exporter-parent/pom.xml
+++ b/jsf-exporter-parent/pom.xml
@@ -9,7 +9,7 @@
 	
 	<groupId>com.lapis.jsfexporter</groupId>
 	<artifactId>jsf-exporter-parent</artifactId>
-	<version>1.0.3.Final</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>Lapis JSF Exporter Parent</name>
@@ -31,7 +31,7 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/rdicroce/jsfexporter.git</developerConnection>
-	  <tag>1.0.3.Final</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<developers>
