--- a/jsf-exporter-test/pom.xml
+++ b/jsf-exporter-test/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.lapis.jsfexporter</groupId>
 		<artifactId>jsf-exporter-parent</artifactId>
-		<version>1.0.3.Final</version>
+		<version>1.0.4-SNAPSHOT</version>
 		<relativePath>../jsf-exporter-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>jsf-exporter-test</artifactId>
@@ -18,7 +18,7 @@
 		<url>https://github.com/rdicroce/jsfexporter</url>
 		<connection>scm:git:git@github.com:rdicroce/jsfexporter.git</connection>
 		<developerConnection>scm:git:git@github.com:rdicroce/jsfexporter.git</developerConnection>
-	  <tag>1.0.3.Final</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<dependencies>
